--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
           lxc: true
           ccache: true
           access-token: ${{ secrets.GH_TOKEN }}
-          release: https://github.com/yoro1836/Kren_kernel_lxc
+          release: true
           anykernel3: true
